# harmony-casper

./: .pre-commit-config.yaml  CONTRIBUTING.md  Dockerfile  README.md  build-service  docker-entrypoint.sh  pyproject.toml
.github/: dependabot.yml  pull_request_template.md
.github/workflows/: build-pipeline.yml  pull_request.yml  release-created.yml  run_tests.yml
casper/: __init__.py  cli.py  convert_to_csv.py  file_ops.py
casper/harmony/: cli.py  download_worker.py  service_adapter.py  util.py
tests/: conftest.py
tests/data/unit-test-data/: Readme.json  Readme.md  TEMPO_HCHO_L3_V04_20250912T210435Z_S012_subsetted.nc4  TEMPO_HCHO_L3_V04_20250912T210435Z_S012_subsetted.nc4-0.csv  TEMPO_HCHO_L3_V04_20250912T210435Z_S012_subsetted.nc4-1.csv  TEMPO_HCHO_L3_V04_20250912T210435Z_S012_subsetted.nc4-1_reformatted.csv
tests/unit/: test_cli.py  test_file_conversion.py  test_file_ops.py
